examples/positive/L4/const_len_array.ob
MODULE ConstLenArray;

CONST x = 42;

TYPE MYARRAY = ARRAY x OF INTEGER;

VAR array1: ARRAY x OF INTEGER;

END ConstLenArray.
