examples/negative/parse_errors/L1/reserved_const.ob
MODULE Reserved;

VAR CONST: INTEGER;

END Reserved.
